fix iphone view regression on ios 9

--- a/src/demo/demo.css
+++ b/src/demo/demo.css
@@ -193,6 +193,8 @@ body {
 
 	height: 10em;
 	bottom: 0;
+
+	overflow-x: hidden;
 }
 
 .media-item {
